small change on comments
