# src/gateways/http/Router.js
@@ -20,7 +20,6 @@ module.exports = (ctx) => {
 
   ApiRouter.use('/users', handle(ctx.userController.router));
   ApiRouter.use('/posts', handle(ctx.postController.router));
-  ApiRouter.use('/comments', handle(ctx.commentController.router));
 
   ApiRouter.use('/*', (_, res) => res.status(404).send({ message: 'Not found' }));
 
