# src/gateways/http/controllers/commentController.js
@@ -1,22 +1,12 @@
 const { Router } = require('express');
 
 module.exports = (ctx) => ({
-  createComment: async (req, res, next) => {
-    try {
-      // todo: input validator
-      const { userId } = req.user;
-      const comment = await ctx.commentOperations.create(userId, req.body);
-      res.status(200).send(comment);
-    } catch (e) {
-      next(e);
-    }
-  },
-
   updateComment: async (req, res, next) => {
     try {
       // todo: input validator
       const { commentId } = req.params;
-      await ctx.commentOperations.update(commentId, req.body);
+      const { content } = req.body;
+      await ctx.commentOperations.update(commentId, content);
       res.status(200).send();
     } catch (e) {
       next(e);
@@ -27,7 +17,8 @@ module.exports = (ctx) => ({
     try {
       // todo: input validator
       const { commentId } = req.params;
-      await ctx.commentOperations.delete(commentId);
+      const { content } = req.body;
+      await ctx.commentOperations.delete(commentId, content);
       res.status(200).send();
     } catch (e) {
       next(e);
@@ -39,7 +30,6 @@ module.exports = (ctx) => ({
 
     router.use(ctx.verifyTokenMiddleware.execute);
 
-    router.post('/', this.createComment);
     router.put('/:commentId', this.updateComment);
     router.delete('/:commentId', this.deleteComment);
 
